--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "author": "Parker McCurley <parker@decentcrypto.com>",
   "license": "MIT",
   "scripts": {
-    "start": "babel-node src",
-    "test": "eslint src"
+    "start": "nodemon --exec node src",
+    "lint": "eslint src",
+    "precommit": "yarn lint",
+    "prepush": "yarn lint"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "eslint": "^4.13.1"
+    "eslint": "^4.13.1",
+    "husky": "^0.14.3",
+    "nodemon": "^1.14.2"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
